@@ -1,3 +1,10 @@
+2003-10-13  Ion Badulescu  <ionut@moisil.badula.org>
+
+	* amd/amfs_generic.c (amfs_bgmount): The fix for the mf_fo NULL
+	pointer dereferencing was a bit too aggressive and could end up
+	not processing the sublink option if the filesystem was already
+	mounted. Report from Rainer Orth.
+
 2003-10-11  Ion Badulescu  <ionut@moisil.badula.org>
 
 	Fix restarted filesystem by disabling the amfs_inherit filesystem
